TPI-165: collapse breakpoint dropdown open style fix

--- a/topmenubar/src/main/resources/de/interseroh/tmb/resource/themes/interseroh/css/individual.less
+++ b/topmenubar/src/main/resources/de/interseroh/tmb/resource/themes/interseroh/css/individual.less
@@ -129,35 +129,58 @@ textarea {
   .APL_application {
     display: none;
   }
+
   .navbar-toggle {
     display: block !important;
   }
+
   .navbar-header {
     width: 100%;
     float: none;
   }
+
   .navbar-nav {
     float: none;
     margin: 0;
   }
-  .navbar-collapse.collapse{
+
+  .navbar-collapse.collapse {
     &:not(.in) {
       display: none !important;
     }
   }
+
+  .dropdown-menu {
+    position: static;
+    float: none;
+    width: auto;
+    background-color: transparent;
+    border: 0;
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    > li > a {
+      color: #777777;
+      padding: 5px 15px 5px 25px;
+      line-height: 26px;
+    }
+  }
 }
+
 @media (min-width: @collapse-breakpoint) {
   .navbar-nav > li {
     float: left;
   }
+
   .interseroh-navbar-right {
     float: right;
     margin-right: -15px;
   }
 }
-.dropdown-menu>li>a:hover, .dropdown-menu>li>a:focus {
+
+.dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
   background-color: #f9f9f9;
 }
+
 .bootstrap-select .btn-default {
   background-color: @secondary-lighter-grey;
   &:hover {
