--- a/topmenubar/src/main/resources/de/interseroh/tmb/resource/themes/interseroh/css/topmenubar.less
+++ b/topmenubar/src/main/resources/de/interseroh/tmb/resource/themes/interseroh/css/topmenubar.less
@@ -31,7 +31,9 @@ body {
       top: 29px;
     }
   }
-
+  .navbar-brand {
+    top: 39px;
+  }
   .navbar {
     background-color: #f8f8f8;
     min-height: 64px;
